# crypto-bot-quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
configs/: adaptation.yaml  backtest.yaml  data.bybit.yaml  data.yaml  execution.yaml  features.yaml  gate_result.schema.json  gates.yaml  live.yaml  metadata.bybit.yaml  metadata.yaml  ml.yaml  ranking.yaml  regime.yaml  risk.yaml  strategies.yaml  universe.yaml
docs/: DEPLOY_PAPER_VPS.md  ml_rl_training.md  spec_compliance.md
docs/decisions/: 0001-phase-1-infrastructure-choices.md  0002-timescaledb-optional-in-phase-1.md  0003-phase-2-data-platform-choices.md  0004-phase-3-universe-and-features.md  0005-phase-4-backtest-engine.md  0006-phase-12-rl-trainer-choice.md  phase13_rollback_plan.md
migrations/: env.py
migrations/versions/: 0001_initial_base_schema.py  0002_data_platform.py  0003_universe_features.py  0004_backtest.py  0005_ml_shadow.py  (+8 more)
phase_prompts/: phase_01.md
scripts/: backfill  backup_db.sh  basis_diagnostic.py  basis_funding.py  basis_sweep.py  entry_quality.py  excursion_from_cache.py  gate_pressure_test.py  leadlag_folds.py  restore_test.sh  validate_local_pkl.py  xsection_flip.py
src/: __init__.py  approvals.py  config_freeze.py  explainability.py  killswitch.py  observability.py  reporting.py  reports.py  scheduler.py
tests/: _data_helpers.py  conftest.py  test_activation_and_reporting.py  test_alerts.py  test_api.py  test_backtest.py  test_basket_paper.py  test_ccxt_source.py  test_cli_demo.py  test_config.py  test_dashboard_pages.py  test_data_config.py  test_data_coverage_snapshot.py  test_data_gaps_backfill.py  test_data_gates.py  test_data_jobs.py  test_data_schema_source.py  test_data_store.py  test_data_validation.py  test_demo_guard.py  test_demo_smoke.py  test_entity_filters.py  test_exchange_universe.py  test_execution.py  test_explainability.py  test_features.py  test_gates.py  test_health_and_db.py  test_job_events.py  test_jobs.py  test_killswitch.py  test_lake_backtest.py  test_lake_strategy_validation.py  test_leaderboard.py  test_live_data_manager.py  test_live_demo_dashboard.py  test_live_guard.py  test_live_loop.py  test_live_venue.py  test_metadata.py  (+30 more)
(+556 files in other folders)
